--- a/locale/en/locale.po
+++ b/locale/en/locale.po
@@ -15,4 +15,4 @@ msgid "plugins.generic.pidManager.displayName"
 msgstr "PID Manager Plugin"
 
 msgid "plugins.generic.pidManager.description"
-msgstr "PID Manager Plugin"
+msgstr "Plugin for managing Persistent Identifiers (PIDs) and depositing to external services."
