--- a/locale/en/locale.po
+++ b/locale/en/locale.po
@@ -17,11 +17,14 @@ msgstr "PID Manager Plugin"
 msgid "plugins.generic.pidManager.description"
 msgstr "Plugin for managing Persistent Identifiers (PIDs) and depositing to external services."
 
-msgid "plugins.generic.pidManager.ror.inputPlaceHolder"
-msgstr "Search ror.org"
+msgid "plugins.generic.pidManager.igsn.workflow.label"
+msgstr "IGSN"
 
-msgid "plugins.generic.pidManager.ror.rorId"
-msgstr "Affiliation ROR iD"
+msgid "plugins.generic.pidManager.igsn.workflow.description"
+msgstr "The International Generic Sample Number or IGSN is a persistent identifier for samples. Learn more at <a href=\"https://igsn.org\">igsn.org</a>."
 
-msgid "plugins.generic.pidManager.ror.description"
-msgstr "ROR is a global, community-led registry of open persistent identifiers for research organizations. Learn more at <a href=\"https://ror.org\">ror.org</a>."
+msgid "plugins.generic.pidManager.igsn.id"
+msgstr "IGSN"
+
+msgid "plugins.generic.pidManager.igsn.description"
+msgstr "The International Generic Sample Number or IGSN is a persistent identifier for samples. Learn more at <a href=\"https://igsn.org\" target=\"_blank\">igsn.org</a>."
