--- a/locale/en/locale.po
+++ b/locale/en/locale.po
@@ -17,6 +17,9 @@ msgstr "PID Manager Plugin"
 msgid "plugins.generic.pidManager.description"
 msgstr "Plugin for managing Persistent Identifiers (PIDs) and depositing to external services."
 
+msgid "plugins.generic.pidManager.igsn.label"
+msgstr "International Generic Sample Number (IGSN)"
+
 msgid "plugins.generic.pidManager.igsn.workflow.name"
 msgstr "IGSN"
 
