add igsn functionality to submission wizard (work in progress)

--- a/.project/.todo.md
+++ b/.project/.todo.md
@@ -1,8 +1,11 @@
 TO DO
 
 deposit
-- datacite > extend datacite code for the igsn
-- crossref > extend crossref code for igsn
+- datacite
+  - extend datacite code for the igsn
+- crossref
+  - extend crossref code for igsn
+  - looks like this is not possible due to crossref schema
 
 database
 - save in publication_setting
