--- a/locale/en/locale.po
+++ b/locale/en/locale.po
@@ -33,10 +33,19 @@ msgid "plugins.generic.pidManager.igsn.workflow.label"
 msgstr "IGSN"
 
 msgid "plugins.generic.pidManager.igsn.workflow.description"
-msgstr "The International Generic Sample Number (IGSN) is a persistent identifier, which is a code "
+msgstr ""
+"The International Generic Sample Number (IGSN) is a persistent identifier, which is a code "
 "that uniquely identifies physical samples from our natural environment and related features-of-interest. "
-"Learn more at <a href=\"https://igsn.org\" target=\"_blank\">igsn.org</a>. <br/>"
-"If you want to search for an IGSN, fill your search phrase at PID and or Label and click on the search button."
+"Learn more at <a href=\"https://igsn.org\" target=\"_blank\">igsn.org</a>.<br/>"
+"If you want to search for an IGSN, fill your search phrase at DOI and or Label and click on the search button."
+
+msgid "plugins.generic.pidManager.igsn.submission.description"
+msgstr ""
+"The International Generic Sample Number (IGSN) is a persistent identifier, which is a code "
+"that uniquely identifies physical samples from our natural environment and related features-of-interest. "
+"Learn more at <a href=\"https://igsn.org\" target=\"_blank\">igsn.org</a>.<br>"
+"The IGSNs can be entered later by the journal manager or another authorised user. "
+"Unfortunately, this cannot be done by the author."
 
 msgid "plugins.generic.pidManager.igsn.workflow.empty"
 msgstr "There are no IGSNs found for this publication."
@@ -53,11 +62,14 @@ msgstr "Add new row"
 msgid "plugins.generic.pidManager.igsn.button.remove.confirm"
 msgstr "Are you sure you want to remove?"
 
-msgid "plugins.generic.pidManager.igsn.datacite.searchPhrase.placeholder"
-msgstr "Type your search phrase here, e.g. 10.12345/12.3456"
+msgid "plugins.generic.pidManager.igsn.datacite.searchPhraseDoi.placeholder"
+msgstr "Type your DOI here, e.g. 10.12345/12.3456"
+
+msgid "plugins.generic.pidManager.igsn.datacite.searchPhraseLabel.placeholder"
+msgstr "Type your label here, e.g. Sediment core"
 
 msgid "plugins.generic.pidManager.igsn.datacite.info"
-msgstr "Please type your search phrase to search on DataCite."
+msgstr "Please type your search phrase above and search on DataCite."
 
 msgid "plugins.generic.pidManager.igsn.datacite.empty"
 msgstr "Your search phrase returned empty."
