--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -120,6 +120,15 @@ msgstr "DOI"
 msgid "plugins.generic.pidManager.pidinst.workflow.table.label"
 msgstr "Label"
 
+msgid "plugins.generic.pidManager.pidinst.workflow.table.creators"
+msgstr "Creators"
+
+msgid "plugins.generic.pidManager.pidinst.workflow.table.publisher"
+msgstr "Publisher"
+
+msgid "plugins.generic.pidManager.pidinst.workflow.table.publicationYear"
+msgstr "Year"
+
 msgid "plugins.generic.pidManager.pidinst.button.add"
 msgstr "Add new row"
 
