--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -21,13 +21,15 @@ msgid "plugins.generic.pidManager.settings.title"
 msgstr "Manage PIDs"
 
 msgid "plugins.generic.pidManager.settings.description"
-msgstr "Use the following checkboxes to select which Persistent Identifiers (PIDs) can be added during the editorial process and made visible in the article view. Ticking a box activates the corresponding PID type."
+msgstr ""
+"Use the following checkboxes to select which Persistent Identifiers (PIDs) can be added during the editorial "
+"process and made visible in the article view. Ticking a box activates the corresponding PID type."
 
 msgid "plugins.generic.pidManager.settings.igsn.label"
-msgstr "IGSN (International Generic Sample Number - <a href=\"https://igsn.org\" target=\"_blank\">igsn.org</a>)"
+msgstr "IGSN (International Generic Sample Number - www.igsn.org)"
 
 msgid "plugins.generic.pidManager.settings.pidinst.label"
-msgstr "PIDINST (Persistent Identification of Instruments - <a href=\"https://pidinst.org\" target=\"_blank\">pidinst.org</a>)"
+msgstr "PIDINST (Persistent Identification of Instruments - www.pidinst.org)"
 
 msgid "plugins.generic.pidManager.igsn.label"
 msgstr "International Generic Sample Number (IGSN)"
@@ -41,16 +43,23 @@ msgstr "IGSN"
 msgid "plugins.generic.pidManager.igsn.workflow.instructions"
 msgstr ""
 "Here you can add existing IGSNs to the publication. "
-"Use the upper table to look up the IGSN that you want to add. Enter the DOI or title of the IGSN. Start the search by clicking the search button and select one of the suggested IGSNs; autocomplete will assist you. You can select multiple IGSNs in one search and close the suggestions by clicking the 'x' button. Greyed-out suggestions have already been added.<br>"
-"The lower table shows the available metadata for the IGSNs you added. These properties will also be displayed in the article view. You can manually add an IGSN and edit the metadata values."
+"Use the upper table to look up the IGSN that you want to add. Enter the DOI or title of the IGSN. "
+"Start the search by clicking the search button and select one of the suggested IGSNs; autocomplete will assist you. "
+"You can select multiple IGSNs in one search and close the suggestions by clicking the 'X' button. "
+"Greyed-out suggestions have already been added. "
+"The lower table shows the available metadata for the IGSNs you added. "
+"These properties will also be displayed in the article view. You can manually add an IGSN and edit the metadata values."
 
 msgid "plugins.generic.pidManager.igsn.generalDescription"
 msgstr ""
-"The International Generic Sample Number (IGSN) is a unique, persistent, domain-agnositc identifier for material samples. These samples can be any material from all disciplines in the universe. "
-"Learn more at <a href=\"https://igsn.org\" target=\"_blank\">igsn.org</a>.<br>"
+"The International Generic Sample Number (IGSN) is a unique, persistent, domain-agnostic identifier for material samples. "
+"These samples can be any material from all disciplines in the universe. "
+"Learn more at www.igsn.org."
 
 msgid "plugins.generic.pidManager.igsn.submission.instructions"
-msgstr "Currently, IGSNs can only be set at a later stage in the editorial process. Please contact the journal manager if you would like to add a IGSN to your publication. For future versions of the PID Manager, it is planned to make IGSNs addable in the submission wizard."
+msgstr "Currently, IGSNs can only be set at a later stage in the editorial process. "
+"Please contact the journal manager if you would like to add a IGSN to your publication. "
+"For future versions of the PID Manager, it is planned to make IGSNs addable in the submission wizard."
 
 msgid "plugins.generic.pidManager.igsn.workflow.empty"
 msgstr "Yet, no IGSNs have been added to this publication."
@@ -103,16 +112,22 @@ msgstr "PIDINST"
 msgid "plugins.generic.pidManager.pidinst.workflow.instructions"
 msgstr ""
 "Here you can add existing PIDINSTs to the publication. "
-"Use the upper table to look up the PIDINST that you want to add. Enter the DOI or title of the PIDINST. Start the search by clicking the search button and select one of the suggested PIDINSTs; autocomplete will assist you. You can select multiple PIDINSTs in one search and close the suggestions by clicking the 'x' button. Greyed-out suggestions have already been added.<br>"
-"The lower table shows the available metadata for the PIDINSTs you added. These properties will also be displayed in the article view. You can manually add an PIDINST and edit the metadata values."
+"Use the upper table to look up the PIDINST that you want to add. Enter the DOI or title of the PIDINST. "
+"Start the search by clicking the search button and select one of the suggested PIDINSTs; autocomplete will assist you. "
+"You can select multiple PIDINSTs in one search and close the suggestions by clicking the 'X' button. "
+"Greyed-out suggestions have already been added. "
+"The lower table shows the available metadata for the PIDINSTs you added. "
+"These properties will also be displayed in the article view. You can manually add an PIDINST and edit the metadata values."
 
 msgid "plugins.generic.pidManager.pidinst.generalDescription"
 msgstr ""
-"The Persistent Identifier for Instruments (PIDINST) is a globally unique identifier for measuring instruments operted in the sciences. "
-"Learn more at <a href=\"https://pidinst.org\" target=\"_blank\">pidinst.org</a>.<br/>"
+"The Persistent Identifier for Instruments (PIDINST) is a globally unique identifier for measuring "
+"instruments operted in the sciences. Learn more at www.pidinst.org."
 
 msgid "plugins.generic.pidManager.pidinst.submission.instructions"
-msgstr "Currently, PIDINSTs can only be set at a later stage in the editorial process. Please contact the journal manager if you would like to add a PIDINST to your publication. For future versions of the PID Manager, it is planned to make PIDINSTs addable in the submission wizard."
+msgstr "Currently, PIDINSTs can only be set at a later stage in the editorial process. "
+"Please contact the journal manager if you would like to add a PIDINST to your publication. "
+"For future versions of the PID Manager, it is planned to make PIDINSTs addable in the submission wizard."
 
 msgid "plugins.generic.pidManager.pidinst.workflow.empty"
 msgstr "Yet, no PIDINSTs have been added to this publication."
